[tool.poetry]
name = "flask_dependency"
version = "0.2.0"
description = ""
authors = ["ventura94 <arianventura94@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
flask = "^3.1.1"
pydantic = { version = "^1.10.19", extras = ["dotenv"] }

[tool.poetry.group.tests.dependencies]
pytest = "^8.2.2"
httpx = "^0.27.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
